--- a/assets/css/roofsie-dark.css
+++ b/assets/css/roofsie-dark.css
@@ -51,7 +51,7 @@ body.boxed-wrapper .page-wrapper,
 .why-choose-one__points-title,
 .testimonial-one__client-name,
 .blog-one__title a {
-    color: #ffffff;
+    color: #d4af37;
 }
 
 
