--- a/assets/css/roofsie-dark.css
+++ b/assets/css/roofsie-dark.css
@@ -36,7 +36,7 @@ body.boxed-wrapper .page-wrapper,
 .blog-one__user-content h5,
 .blog-one__text,
 .blog-one__read-more a {
-    color: #f8f9fa;
+    color: #827f88;
 }
 
 
