--- a/assets/css/roofsie.css
+++ b/assets/css/roofsie.css
@@ -90,7 +90,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #fff;
+  color: #000;
   margin: 0;
 }
 
@@ -309,7 +309,7 @@ ul {
     color: #ffffff;
     font-weight: 700;
     line-height: 26px;
-    text-transform: uppercase;
+    text-transform: inherit;
     letter-spacing: 0.1em;
     margin-bottom: 10px;
     background: #fff;
@@ -7155,7 +7155,7 @@ ul {
   position: relative;
   display: inline-block;
   width: 100%;
-  color: var(--roofsie-black);
+  color: #9e9e9e;
   font-size: 12px;
   font-weight: 800;
   text-transform: uppercase;
